fixed the logos of main

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    background-color: #1a1e27;
+    background-color: #2E3440;
     color: white;
     font-family: Arial, sans-serif;
     text-align: center;
