--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@ body {
 }
 
 header {
+    font-family: Helvetica;
     padding: 20px;
     font-weight: bold;
 }
@@ -48,4 +49,7 @@ nav a {
     color: white;
     text-decoration: none;
     margin-left: 15px;
+}
+a:hover {
+    color: #81A1C1;
 }
